// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`avatar > renders 128 px with magenta 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed in - as Elizabeth"[39m
    [33mclass[39m=[32m"avatar avatar--128 avatar--magenta"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [0mE[0m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`avatar > renders defaults 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed in - as Elizabeth"[39m
    [33mclass[39m=[32m"avatar avatar--teal"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [0mE[0m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`avatar > renders signed out 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed out"[39m
    [33mclass[39m=[32m"avatar"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [36m<svg[39m
      [33maria-hidden[39m=[32m"true"[39m
      [33mclass[39m=[32m"icon icon--avatar-signed-out"[39m
      [33mfocusable[39m=[32m"false"[39m
    [36m>[39m
      [36m<defs>[39m
        [36m<symbol[39m
          [33mid[39m=[32m"icon-avatar-signed-out"[39m
          [33mviewBox[39m=[32m"0 0 40 40"[39m
        [36m>[39m
          [36m<circle[39m
            [33mcx[39m=[32m"20"[39m
            [33mcy[39m=[32m"20"[39m
            [33mfill[39m=[32m"var(--color-background-secondary, #F7F7F7)"[39m
            [33mr[39m=[32m"20"[39m
          [36m/>[39m
          [36m<circle[39m
            [33mcx[39m=[32m"20"[39m
            [33mcy[39m=[32m"17.5"[39m
            [33mfill[39m=[32m"var(--color-foreground-secondary, #707070)"[39m
            [33mr[39m=[32m"8.333"[39m
          [36m/>[39m
          [36m<path[39m
            [33md[39m=[32m"M7.67 35.748c2-4.84 6.767-8.248 12.33-8.248s10.33 3.407 12.33 8.249A19.914 19.914 0 0 1 20 40a19.914 19.914 0 0 1-12.33-4.252Z"[39m
            [33mfill[39m=[32m"var(--color-foreground-secondary, #707070)"[39m
          [36m/>[39m
        [36m</symbol>[39m
      [36m</defs>[39m
      [36m<use[39m
        [33mhref[39m=[32m"#icon-avatar-signed-out"[39m
      [36m/>[39m
    [36m</svg>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`avatar > renders with custom body 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed in - as Elizabeth"[39m
    [33mclass[39m=[32m"avatar avatar--teal"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [0mcustom body[0m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`avatar > renders with doggy as username 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed in - as Elizabeth"[39m
    [33mclass[39m=[32m"avatar avatar--teal"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [0mD[0m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`avatar > renders with image 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed in - as Doggy"[39m
    [33mclass[39m=[32m"avatar"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [36m<img[39m
      [33malt[39m=[32m"my photo"[39m
      [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c01/skin/docs/dog_profile.png"[39m
    [36m/>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`avatar > renders with robert as username 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed in - as Elizabeth"[39m
    [33mclass[39m=[32m"avatar avatar--teal"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [0mR[0m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`avatar > renders with test as usernames 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Signed in - as Elizabeth"[39m
    [33mclass[39m=[32m"avatar avatar--teal"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [0mT[0m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
